# TestArmGit

install/: local_setup.sh  setup.sh
install/ackermann_steering_controller/include/ackermann_steering_controller_parameters/: ackermann_steering_controller_parameters.hpp
install/ackermann_steering_controller/share/ackermann_steering_controller/: ackermann_steering_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/admittance_controller/include/admittance_controller_parameters/: admittance_controller_parameters.hpp
install/admittance_controller/share/admittance_controller/: admittance_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_moveit_config/share/arm_moveit_config/: .setup_assistant  package.sh  package.xml
log/: latest_build  latest_list
src/arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  testarm.ros2_control.xacro  testarm.urdf.xacro
src/arm_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/testarm/: CMakeLists.txt  package.xml
src/testarm/config/: testarm_controller.yaml
src/testarm/launch/: display.launch.py  gazebo.launch.py
src/testarm/meshes/: l1.STL  l3.STL
src/testarm/rviz/: urdf.rviz
src/testarm/urdf/: ros2_control.xacro  testarm_core.xacro  testarm_urdf.urdf.xacro
src/testarm/worlds/: testarm.world
(+1782 files in other folders)
