<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.lagsam@gmail.com">michael</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_m0del_path = "/home/michael/ros2_ws/install/testarm/share/"/>
  </export>
</package>
